# IneptLogger

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
inc/: Log.h  LogEnums.h
src/: Log.cpp
tests/: CMakeLists.txt  LogTests.cpp
